Implemented target editor, fixed a bug with last commit, added spell level fields. Targeting flags are currently INCORRECT awaiting correct documentation.

--- a/SpellGUIEditor/SpellGUIEditor.vbproj
+++ b/SpellGUIEditor/SpellGUIEditor.vbproj
@@ -78,6 +78,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form5.Designer.vb">
+      <DependentUpon>Form5.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form5.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form4.Designer.vb">
       <DependentUpon>Form4.vb</DependentUpon>
     </Compile>
@@ -122,6 +128,9 @@
     <Compile Include="SpellAttributes.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form5.resx">
+      <DependentUpon>Form5.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form4.resx">
       <DependentUpon>Form4.vb</DependentUpon>
     </EmbeddedResource>
