Implement string localisation (untested).

--- a/SpellGUIEditor/SpellGUIEditor.vbproj
+++ b/SpellGUIEditor/SpellGUIEditor.vbproj
@@ -141,7 +141,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="mysqldb.vb" />
+    <Compile Include="XMLConfig.vb" />
     <Compile Include="SpellAttributes.vb" />
   </ItemGroup>
   <ItemGroup>
